--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-        <title>WeUI</title>
+        <title>文化艺术培训机构</title>
         <link rel="stylesheet" href="//res.wx.qq.com/open/libs/weui/1.1.2/weui.min.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
         <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.js"></script>
+        <script src="vendor/zepto.touch.js"></script>        
     </head>
     <body>
