--- a/views/courseDetail.ejs
+++ b/views/courseDetail.ejs
@@ -30,8 +30,7 @@
   </div>
   <div class="apply-panel">
     <span class="price">￥<%= courseInfo.price %></span>
-    <a href="javascript:void(0)" class="apply-button">立即报名</a>
+    <a href='/course/order/detail?courseId=<%= courseInfo._id %>' class="apply-button">立即报名</a>
   </div>
-
 <script src="/js/courseDetail.js"></script>
 <%- include('./layouts/footer') %>
