--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('./layouts/header') %>
 <%- include('./layouts/searchBar.ejs') %>
 
-<div class="weui-tab">
+<div class="weui-tab index">
   <div class="weui-tab__panel">
     <div style="display:block" class="tab-item">
         <div class="weui-panel weui-panel_access">
