--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,6 +120,11 @@ html, body {
   padding: 0;
 }
 
+.comment-nickname span {
+  font-size: 10px;
+  color: red;
+}
+
 .comment-content {
   display: inline-block;
   padding: 0 8px 2px 0;
@@ -128,6 +133,10 @@ html, body {
 .comment-timeago {
   color: #999;
   font-size: 12px;
+}
+
+.sub-item {
+  margin-left: 40px;
 }
 
 /* order detail */
