添加个人信息以及实现订单显示功能

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,26 @@
     <div style="display:none" class="tab-item">Page 3</div>
     <div style="display:none" class="tab-item">
         <span class="nickname"></span>
+        <div class="weui-cells">
+            <a class="weui-cell weui-cell_access my-link" href="javascript:;" data-href="myOrder">
+                <div class="weui-cell__hd"><img src="/images/myOrder.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
+                <div class="weui-cell__bd">
+                    <p>我的订单</p>
+                </div>
+            </a>
+            <a class="weui-cell weui-cell_access my-link" href="javascript:;" data-href="myCourse">
+                <div class="weui-cell__hd"><img src="/images/myCourse.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
+                <div class="weui-cell__bd">
+                    <p>我的课程</p>
+                </div>
+            </a>
+            <a class="weui-cell weui-cell_access my-link" href="javascript:;" data-href="myAudition">
+                <div class="weui-cell__hd"><img src="/images/myAudition.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
+                <div class="weui-cell__bd">
+                    <p>我的课程</p>
+                </div>
+            </a>
+        </div>
     </div>    
   </div>
   <div class="weui-tabbar">
