--- a/views/myOrder.ejs
+++ b/views/myOrder.ejs
@@ -8,24 +8,21 @@
 </div>
 
 <ul class="order-list">
-  <li class="order-item">
-    <div class="orderNum">订单编号: 1231454654</div>
-    <div class="order-info">
-      <a href="">
-        <img src="http://dummyimage.com/200x200/f2d479/b179f2&text=C">
-        <div>
-          <span>水粉</span>
-          <span>￥100</span>
-        </div>
-      </a>
-    </div>
-    <span class="price">总价: ￥100</span>
-  </li>
-  <li class="order-item">
-    <div class="orderNum">订单编号: 1231454654</div>
-    <div class="order-info">订单信息</div>
-    <span class="price">总价: ￥100</span>
-  </li>
+  <% for (var i = 0; i < orders.length; i++) {%>
+    <li class="order-item">
+      <div class="orderNum">订单编号: <%= orders[i].orderNo%></div>
+      <div class="order-body">
+        <a href="#" class="order-link">
+          <img src="http://dummyimage.com/200x200/f2d479/b179f2&text=C">
+          <div class="order-info">
+            <span><%= orders[i].course.courseName %></span>
+            <span class="price">￥<%= orders[i].course.price %></span>
+          </div>
+        </a>
+      </div>
+      <span>总价: <span class="price">￥<%= orders[i].course.price %></span></span>
+    </li>
+  <% }%>
 </ul>
 
 <%- include('./layouts/footer') %>
