完成我的课程页面功能

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
             <a class="weui-cell weui-cell_access my-link" href="javascript:;" data-href="myAudition">
                 <div class="weui-cell__hd"><img src="/images/myAudition.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
                 <div class="weui-cell__bd">
-                    <p>我的课程</p>
+                    <p>我的试听</p>
                 </div>
             </a>
         </div>
