--- a/views/myList.ejs
+++ b/views/myList.ejs
@@ -4,25 +4,46 @@
   <a href="javascript:history.go(-1)" class="back">
     <img src="/images/back.png">
   </a>
-  <span>我的订单</span>
+  <% if (orders) {%>
+    <span>我的订单</span>
+  <% } else if (courses) {%>
+    <span>我的课程</span>
+  <%　}　%>
 </div>
 
 <ul class="order-list">
-  <% for (var i = 0; i < orders.length; i++) {%>
-    <li class="order-item">
-      <div class="orderNum">订单编号: <%= orders[i].orderNo%></div>
-      <div class="order-body">
-        <a href="#" class="order-link">
-          <img src="http://dummyimage.com/200x200/f2d479/b179f2&text=C">
-          <div class="order-info">
-            <span><%= orders[i].course.courseName %></span>
-            <span class="price">￥<%= orders[i].course.price %></span>
-          </div>
-        </a>
-      </div>
-      <span>总价: <span class="price">￥<%= orders[i].course.price %></span></span>
-    </li>
-  <% }%>
+  <% if (orders) {%>
+    <% for (var i = 0; i < orders.length; i++) {%>
+      <li class="order-item">
+        <div class="orderNum">订单编号: <%= orders[i].orderNo%></div>
+        <div class="order-body">
+          <a href="/course/<%= orders[i].course._id %>" class="order-link">
+            <img src="http://dummyimage.com/200x200/f2d479/b179f2&text=C">
+            <div class="order-info">
+              <span><%= orders[i].course.courseName %></span>
+              <span class="price">￥<%= orders[i].course.price %></span>
+            </div>
+          </a>
+        </div>
+        <span>总价: <span class="price">￥<%= orders[i].course.price %></span></span>
+      </li>
+    <% }%>
+  <% } else if (courses) { %>
+    <% for (var i = 0; i < courses.length; i++) {%>
+      <li class="order-item">
+        <div class="order-body">
+          <a href="/course/<%= courses[i]._id %>" class="order-link">
+            <img src="http://dummyimage.com/200x200/f2d479/b179f2&text=C">
+            <div class="order-info">
+              <span><%= courses[i].courseName %></span>
+              <span class="price">￥<%= courses[i].price %></span>
+            </div>
+          </a>
+        </div>
+        <span><%= courses[i].campus %></span>
+      </li>
+    <% }%>
+  <% } %>
 </ul>
 
 <%- include('./layouts/footer') %>
