--- a/views/myList.ejs
+++ b/views/myList.ejs
@@ -8,7 +8,7 @@
     <span>我的订单</span>
   <% } else if (courses) {%>
     <span>我的课程</span>
-  <%　} else if (auditons) {%>
+  <%　} else if (auditions) {%>
     <span>我的试听</span>
   <%　}　%>
 </div>
