根据课程类型，返回对应的tag

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
         <div class="head-bg">
             <ul class="tags-list formal">
                 <li class="active">全部</li>
-                <% for (var i = 0; i < tags.length; i++) { %>
-                    <li><%= tags[i] %></li>
+                <% for (var i = 0; i < f_tags.length; i++) { %>
+                    <li><%= f_tags[i] %></li>
                 <% } %>
             </ul>
         </div>
@@ -22,8 +22,8 @@
         <div class="head-bg">
             <ul class="tags-list audition">
                 <li class="active">全部</li>
-                <% for (var i = 0; i < tags.length; i++) { %>
-                    <li><%= tags[i] %></li>
+                <% for (var i = 0; i < a_tags.length; i++) { %>
+                    <li><%= a_tags[i] %></li>
                 <% } %>
             </ul>
         </div>
