--- a/views/courseDetail.ejs
+++ b/views/courseDetail.ejs
@@ -33,7 +33,7 @@
                   </div>
               </div>
           </div>
-          <a href="javascript:;" class="weui-btn weui-btn_primary submit-feedback">提交反馈</a>
+          <a href="javascript:;" class="weui-btn weui-btn_primary submit-feedback" style="width: 50%; margin-top: 8px;">提交反馈</a>
           <div class="comment-list-wrapper feedback">
             <% if (commentsFeedback.length > 0) {%>
               <% for(var i = 0; i < commentsFeedback.length; i++) {%>
@@ -78,7 +78,7 @@
                   </div>
               </div>
           </div>
-          <a href="javascript:;" class="weui-btn weui-btn_primary submit-content">提交咨询</a>
+          <a href="javascript:;" class="weui-btn weui-btn_primary submit-content" style="width: 50%; margin-top: 8px;">提交咨询</a>
           <div class="comment-list-wrapper advisory">
             <% if (commentsAdv.length > 0) {%>
               <% for(var i = 0; i < commentsAdv.length; i++) {%>
