--- a/views/orderDetail.ejs
+++ b/views/orderDetail.ejs
@@ -1,10 +1,25 @@
 <%- include('./layouts/header.ejs') %>
 
 <input type="hidden" name="courseid" value="<%= courseInfo._id %>" id="courseId">
-<div>
-  订单详情
+<div class="order-item" style="padding-left: 8px;">
+    <% if (courseInfo.courseType === 'formal') {%>
+        <div class="orderNum">订单详情</div>
+    <% } else if (courseInfo.courseType === 'audition') {%>
+        <div class="orderNum">试听信息</div>
+    <% } %>
+
+    <div class="order-body">
+        <a href="/course/<%= courseInfo._id %>" class="order-link">
+        <img src="http://dummyimage.com/200x200/f2d479/b179f2&text=C">
+        <div class="order-info">
+            <span><%= courseInfo.courseName %></span>
+            <span class="price">￥<%= courseInfo.price %></span>
+        </div>
+        </a>
+    </div>
+    <span>总价: <span class="price">￥<%= courseInfo.price %></span></span>
 </div>
-<div style="width:100%">
+<div style="width:100%; margin-bottom: 45px;">
   <div class="weui-cells__title">请填写学员信息</div>
   <div class="weui-cells weui-cells_form">
     <div class="weui-cell">
