显示个人微信信息

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,13 @@
     </div>
     <div style="display:none" class="tab-item">Page 3</div>
     <div style="display:none" class="tab-item">
-        <span class="nickname"></span>
+        <div class="profile">
+            <img src="http://wx.qlogo.cn/mmopen/vi_32/cg0yk4ZMVAxMUqPyqecm705oibkb40Vm6hGxt3MqAl4epic4rM4bvdLAVibWiaGkUbBcziaRlVSTphhtZ5qmDmpZFqA/0">
+            <div>
+                <span class="nickname"></span>
+                <span class="city">九江</span>
+            </div>
+        </div>
         <div class="weui-cells">
             <a class="weui-cell weui-cell_access my-link" href="javascript:;" data-href="myOrder">
                 <div class="weui-cell__hd"><img src="/images/myOrder.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
