--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,30 @@ li {
   background: red;
 }
 
+/* index profile */
+.profile {
+  display: flex;
+  margin-top: 10px;
+  padding: 10px;
+  background: #ffffff;
+}
+
+.profile img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.profile div {
+  display: flex;
+  flex-direction: column;
+}
+
+.profile .city {
+  font-size: 12px;
+  color: #666;
+}
+
 /* course detail */
 .course-info {
   width: 100%;
@@ -166,6 +190,7 @@ li {
 .sub-item {
   margin-left: 40px;
 }
+
 
 /* order detail */
 
