--- a/views/myList.ejs
+++ b/views/myList.ejs
@@ -32,7 +32,7 @@
         </div>
         <div style="display: flex; justify-content: space-between;align-items: flex-end;padding-right: 4px;">
           <span>总价: <span class="price">￥<%= orders[i].course.price %></span></span>
-          <span><%= orders[i].date %></span>
+          <span style="font-size:12px;"><%= orders[i].createAt %></span>
         </div>
       </li>
     <% }%>
