--- a/views/layouts/searchBar.ejs
+++ b/views/layouts/searchBar.ejs
@@ -1,14 +1,58 @@
-<div class="weui-search-bar" id="search_bar">
+<div class="weui-search-bar" id="searchBar">
     <form class="weui-search-bar__form">
         <div class="weui-search-bar__box">
             <i class="weui-icon-search"></i>
-            <input type="search" class="weui-search-bar__input" id="search_input" placeholder="搜索" />
-            <a href="javascript:" class="weui-icon-clear" id="search_clear"></a>
+            <input type="search" class="weui-search-bar__input" id="searchInput" placeholder="搜索" />
+            <a href="javascript:" class="weui-icon-clear" id="searchClear"></a>
         </div>
-        <label for="search_input" class="weui-search-bar__label" id="search_text">
+        <label for="search_input" class="weui-search-bar__label" id="searchText">
             <i class="weui-icon-search"></i>
             <span>搜索</span>
         </label>
     </form>
-    <a href="javascript:" class="weui-search-bar__cancel-btn" id="search_cancel">取消</a>
+    <a href="javascript:" class="weui-search-bar__cancel-btn" id="searchCancel">取消</a>
 </div>
+<script>
+    $(function(){
+        var $searchBar = $('#searchBar'),
+            // $searchResult = $('#searchResult'),
+            $searchText = $('#searchText'),
+            $searchInput = $('#searchInput'),
+            $searchClear = $('#searchClear'),
+            $searchCancel = $('#searchCancel')
+
+        function hideSearchResult(){
+            // $searchResult.hide()
+            $searchInput.val('')
+        }
+        function cancelSearch(){
+            // hideSearchResult()
+            $searchBar.removeClass('weui-search-bar_focusing')
+            $searchText.show()
+        }
+
+        $searchText.on('click', function(){
+            $searchBar.addClass('weui-search-bar_focusing')
+            $searchInput.focus()
+        });
+        $searchInput
+            .on('blur', function () {
+                if(!this.value.length) cancelSearch()
+            })
+            .on('input', function(){
+                if(this.value.length) {
+                    $searchResult.show()
+                } else {
+                    $searchResult.hide()
+                }
+            })
+        $searchClear.on('click', function(){
+            // hideSearchResult()
+            $searchInput.focus()
+        })
+        $searchCancel.on('click', function(){
+            cancelSearch()
+            $searchInput.blur()
+        })
+    })
+</script>
