--- a/views/search.ejs
+++ b/views/search.ejs
@@ -8,7 +8,7 @@
       <% for (var i = 0; i < courses.length; i++) {%>
         <a href="course/<%= courses[i]._id%>" class="weui-media-box weui-media-box_appmsg">
           <div class="weui-media-box__hd">
-            <img class="weui-media-box__thumb" src="http://dummyimage.com/200x200/f2d479/b179f2&text=C" alt="">
+            <img class="weui-media-box__thumb" src="<%= courses[i].picUrl %>" alt="">
           </div>
           <div class="weui-media-box__bd">
             <h4 class="weui-media-box__title" style="display:flex;justify-content:space-between;">
@@ -18,7 +18,14 @@
               </span>
             </h4>
             <p class="weui-media-box__desc"><%= courses[i].introduction%></p>
-            <span style="color: red; font-size: 12px;">￥<%= courses[i].price%></span>
+            <span style="color: red; font-size: 12px;">
+              <% if (Number(courses[i].price) === 0) {%>
+                <span>试听</span>
+              <%} else {%>
+                <span><%= courses[i].price %></span>
+                <span style="display: inline-block;width: 80%;text-align: right;">正式</span>
+              <% } %>
+            </span>
           </div>
         </a>
       <% } %>
