--- a/views/orderDetail.ejs
+++ b/views/orderDetail.ejs
@@ -10,7 +10,7 @@
 
     <div class="order-body">
         <a href="/course/<%= courseInfo._id %>" class="order-link">
-        <img src="http://dummyimage.com/200x200/f2d479/b179f2&text=C">
+        <img src="<%= courseInfo.picUrl %>">
         <div class="order-info">
             <span><%= courseInfo.courseName %></span>
             <span class="price">￥<%= courseInfo.price %></span>
